# MMT_assesment

./: Quize Questions - ROS_CV.docx  README.md
Q1/: ChessBoard_Checker.py
Q2/: depth-estimation.py
Q3/src/UR5e_URDF/: CMakeLists.txt  package.xml
Q3/src/UR5e_URDF/launch/: ur5e.launch
Q3/src/UR5e_URDF/urdf/: ur.urdf.xacro
